# hv-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/hv/: __init__.py  cli.py  utils.py
src/hv/commands/: ai.py  asana.py  gcloud.py  git.py  gitlab.py  slack.py  zoom.py
src/hv/config/: command.yaml  credentials.example.yaml  variables.example.yaml
